Curve softbodies doesn't render animation (cycles) #32667

Closed
opened 2012-09-26 14:09:11 +02:00 by Vincent PARIS · 7 comments

%%%Hi
when i render this scene (attached ) the curve-object (spiral) doesn't deform ( no animation ) like in the open gl viewport.
At the beginning, i suspected a problem of cache-baking but whatever the cache settings are, nothing happens...
Is it a bug, a limitation or did-i miss something ?

Big big congrats to all the team for your wonderfull work with blender !

Thank you

System:
Blender 2.63.22 RC2 - w2600@ 4.4 ghz / 2xGTX580 / Win7 64 - 32 gigs ram%%%

%%%Hi when i render this scene (attached ) the curve-object (spiral) doesn't deform ( no animation ) like in the open gl viewport. At the beginning, i suspected a problem of cache-baking but whatever the cache settings are, nothing happens... Is it a bug, a limitation or did-i miss something ? Big big congrats to all the team for your wonderfull work with blender ! Thank you System: Blender 2.63.22 RC2 - w2600@ 4.4 ghz / 2xGTX580 / Win7 64 - 32 gigs ram%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Looking into this.%%%

%%%Looking into this.%%%
Author

%%%just: with bi renderer, it works... seems to be a problem with cycles...%%%

%%%just: with bi renderer, it works... seems to be a problem with cycles...%%%

%%%That was an issue with resetting point cache when duplicating objects. Cycles is duplicating Curves and converts them to Meshes when rendering, that's why curve with softbody wasn't deformed on render.

Made a patch which duplicates pointcache when duplicating objects, so now rendering happens correct.

There's one change in behavior tho -- if you'll Shift-D object with softbody, object will stay "unmoved" when you'll be moving it after duplicate and will only became undeformed after finishing transform. Before this patch object will became undeformed from the very beginning of Shift-D. Not sure if it's really big issue -- when you'll simply try move object with softbody it'll behave in exactly the same way.

@brecht, would be cool if you check whether such change seems safe for you. Otherwise i can make it duplicate softbody for Cycles needs only.%%%

%%%That was an issue with resetting point cache when duplicating objects. Cycles is duplicating Curves and converts them to Meshes when rendering, that's why curve with softbody wasn't deformed on render. Made a patch which duplicates pointcache when duplicating objects, so now rendering happens correct. There's one change in behavior tho -- if you'll Shift-D object with softbody, object will stay "unmoved" when you'll be moving it after duplicate and will only became undeformed after finishing transform. Before this patch object will became undeformed from the very beginning of Shift-D. Not sure if it's really big issue -- when you'll simply try move object with softbody it'll behave in exactly the same way. @brecht, would be cool if you check whether such change seems safe for you. Otherwise i can make it duplicate softbody for Cycles needs only.%%%
Author

%%%thanks a lot for resolving it.
Hoping it will be fixed in SVN%%%

%%%thanks a lot for resolving it. Hoping it will be fixed in SVN%%%

%%%Commited with some modifications to preserve Shift-D behavior change. Rendering should work fine in rev50924.

Thanks for the report, closing now.%%%

%%%Commited with some modifications to preserve Shift-D behavior change. Rendering should work fine in rev50924. Thanks for the report, closing now.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32667
No description provided.