Fix #32667: Curve softbodies doesn't render animation (cycles)

Issue was caused by cycles being duplicated curve objects before converting
them to mesh. This duplication will loose pointcache which resulted in object
not being properly deformed.